finished the agile slides

--- a/src/main/webapp/Devoxx2012.html
+++ b/src/main/webapp/Devoxx2012.html
@@ -587,18 +587,36 @@ public void thenATMShouldRetainCard() {
 </article>
 
 
-<article>
+<article class="smaller">
     <h3>Agile++ - Continuous ...</h3>
     <ul>
         <li>Continuous Integration<br>
-        <small>Software should be always buildable</small>
-
+        <small>
+            Software should always be buildable<br>
+            <strong>
+                Tests: Unit-tests<br>
+                Tools: Jenkins
+            </strong>
+        </small>
         <li>Continuous Deployment<br>
-        <small>Software should be always deployable</small>
+        <small>
+             Software should always be deployable<br>
+            <strong>
+                Tests: Integration-tests, Automated acceptance tests<br>
+                Tools: Puppet, Vagrant, Bamboo
+            </strong>
+        </small>
         <li>Continuous Delivery<br>
-        <small>Software should be always deliverable</small>
+        <small>
+            Software should always be deliverable<br>
+            <strong>
+                Tests: User Acceptance Testing<br>
+                Tools: Puppet, Vagrant, Bamboo
+            </strong>
+        </small>
     </ul>
-</article>
+    <p>From each level direct feedback to the team is essential for issues to be picked up and fixed quickly.</p>
+ </article>
 
 <article class="smaller">
     <h3>Agile++ - Take the pain early</h3>
