--- a/src/main/webapp/Widgets.html
+++ b/src/main/webapp/Widgets.html
@@ -233,8 +233,9 @@ Summary="something big happened"
                 </tr>
             </table>
             <p>
-                Here the Data source is the Ambient Data Framework<br>
-                more specific all claims belonging to audience manager<br>
+                <small>Here the Data source is the Ambient Data Framework<br>
+                more specific all claims belonging to audience manager</small><br>
+
                 <table>
                     <tr>
                         <th  colspan="2">Another examples of data sources</th>
