--- a/src/main/webapp/Widgets.html
+++ b/src/main/webapp/Widgets.html
@@ -217,9 +217,8 @@ Summary="something big happened"
 
     <article>
         <h3>From Template to webpage</h3>
-        <section>
-
-            <table>
+        <section class="build">
+           <table>
                 <tr>
                     <th colspan="2">Widget Configuration (Embedded schema)</th>
                 </tr>
@@ -235,7 +234,7 @@ Summary="something big happened"
             <p>
                 <small>Here the Data source is the Ambient Data Framework<br>
                 more specific all claims belonging to audience manager</small><br>
-
+            </p>
                 <table>
                     <tr>
                         <th  colspan="2">Another examples of data sources</th>
@@ -249,7 +248,6 @@ Summary="something big happened"
                         <td></td>
                     </tr>
                 </table>
-            </p>
         </section>
     </article>
 
