--- a/src/main/webapp/Widgets.html
+++ b/src/main/webapp/Widgets.html
@@ -372,9 +372,9 @@ public class TestWidgetProvider() {
             Demo
         </h1>
         <p>
-            <a href="http://devgertjan.global.sdl.corp:8080/SmartTarget/root/regions.jsp" target="_blank">Regions</a><br>
-            <a href="http://devgertjan.global.sdl.corp:8080/SmartTarget/root/presentation.jsp" target="_blank">This Presentation</a><br>
-            <a href="http://devgertjan.global.sdl.corp:8080/SmartTarget/root/holidaycenter.jsp" target="_blank">Tridion Holiday Center</a><br>
+            <a href="http://devgertjana.global.sdl.corp:8080/SmartTarget/root/regions.jsp" target="_blank">Regions</a><br>
+            <a href="http://devgertjana.global.sdl.corp:8080/SmartTarget/root/presentation.jsp" target="_blank">This Presentation</a><br>
+            <a href="http://devgertjana.global.sdl.corp:8080/SmartTarget/root/holidaycenter.jsp" target="_blank">Tridion Holiday Center</a><br>
         </p>
     </article>
     <article>
