created summary, moved to after demo

--- a/src/main/webapp/Widgets.html
+++ b/src/main/webapp/Widgets.html
@@ -353,30 +353,39 @@ public class TestWidgetProvider() {
     </article>
 
     <article>
-        <h3>Still to do</h3>
-        <ul>
-            <li>
-                Representation of Widgets in the CME/XM<br>
-                <small>Users should be able to work easily with them</small>
-            <li>
-                Publish Widgets<br>
-                <small>as one entity including functionality in the form of dll, jar, or js file</small>
-            <li>
-                Share Widgets<br>
-                <small>TridionWorld?, Stackoverflow?, Github?</small>
-        </ul>
-    </article>
-
-    <article>
         <h1>
             Demo
         </h1>
         <p>
-            <a href="http://devgertjana.global.sdl.corp:8080/SmartTarget/root/regions.jsp" target="_blank">Regions</a><br>
-            <a href="http://devgertjana.global.sdl.corp:8080/SmartTarget/root/presentation.jsp" target="_blank">This Presentation</a><br>
-            <a href="http://devgertjana.global.sdl.corp:8080/SmartTarget/root/holidaycenter.jsp" target="_blank">Tridion Holiday Center</a><br>
+            <a href="http://devgertjana.global.sdl.corp:8080/SmartTargetWeb/root/regions.jsp" target="_blank">Regions</a><br>
+            <a href="http://devgertjana.global.sdl.corp:8080/SmartTargetWeb/root/presentation.jsp" target="_blank">This Presentation</a><br>
+            <a href="http://devgertjana.global.sdl.corp:8080/SmartTargetWeb/root/holidaycenter.jsp" target="_blank">Tridion Holiday Center</a><br>
         </p>
     </article>
+
+    <article>
+        <h3>Summary / Still to do</h3>
+        <p>To summarize, Widgets are just CP's.<br>
+            So far I haven't done anything the product cannot do already.</p>
+        <ul>
+            <li>
+                Representation of Widgets in the CME/XM<br>
+                <small>
+                    Users should be able to work easily with them<br>
+                    you will _not_ see a datasource url anywhere!
+                </small>
+            <li>
+                Publish Widgets<br>
+                <small>
+                    as one entity including functionality in the form of dll, jar, or js file<br>
+                    not suitable for all customers due to 'no code publishing' policies
+                </small>
+            <li>
+                Share Widgets<br>
+                <small>TridionWorld?, Stackoverflow?, Github?, friends?</small>
+        </ul>
+    </article>
+
     <article>
         <h1>
             Questions
