updated widget_action_finish picture

--- a/src/main/webapp/Widgets.html
+++ b/src/main/webapp/Widgets.html
@@ -121,7 +121,7 @@
 slides below. -->
 
     <article class="fill">
-        <h1>Widgets - Proof of Concept</h1>
+        <h1>Widgets</h1>
         <p style="color:white;">
             <img src="images/laptop.jpg">
             Gertjan Assies<br>
@@ -133,7 +133,8 @@ slides below. -->
         <h3>Component Presentation</h3>
         <div class="build">
         <p><br>
-            A componentpresentation is a combination of a component and a template</p>
+            A component presentation is:<br>
+            a combination of a component and a (component)template</p>
         <table>
             <tr>
                 <th>Component</th>
@@ -241,11 +242,12 @@ Summary="something big happened"
                     </tr>
                     <tr>
                         <td>http://weather.com/api/localweather.xml</td>
-                        <td></td>
                     </tr>
                     <tr>
                         <td>component://Component.Fields.FieldName</td>
-                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>widget://name_of_widget</td>
                     </tr>
                 </table>
         </section>
@@ -268,8 +270,8 @@ Summary="something big happened"
             <table>
                 <tr>
                     <td><img src="images/widget_finish_action.png"/></td>
-                    <td>A Template building block will take care of the transformation to tcdl tags
-                        <br>(In case of a static widget just render the content)</td>
+                    <td>When rendering a template building block will take care of the transformation to &lt;tcdl> tags
+                        <br><br>(In case of a static widget just render the content)</td>
                 </tr>
             </table>
 
