--- a/src/main/webapp/Widgets.html
+++ b/src/main/webapp/Widgets.html
@@ -361,15 +361,16 @@ public class TestWidgetProvider() {
         </h1>
         <p>
             <a href="http://devgertjana.global.sdl.corp:8080/SmartTargetWeb/root/regions.jsp" target="_blank">Regions</a><br>
-            <a href="http://devgertjana.global.sdl.corp:8080/SmartTargetWeb/root/presentation.jsp" target="_blank">This Presentation</a><br>
             <a href="http://devgertjana.global.sdl.corp:8080/SmartTargetWeb/root/holidaycenter.jsp" target="_blank">Tridion Holiday Center</a><br>
+            <a href="http://devgertjana.global.sdl.corp:8080/SmartTargetWeb/root/presentation.jsp" target="_blank">This Presentation</a><br>
         </p>
     </article>
 
     <article>
         <h3>Summary / Still to do</h3>
-        <p>To summarize, Widgets are just CP's.<br>
-            So far I haven't done anything the product cannot do already.</p>
+        <p>To summarize, Widgets are just CP's, but a bit on steroids.<br>
+           To take this further we need to think about:
+            </p>
         <ul>
             <li>
                 Representation of Widgets in the CME/XM<br>
